<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ndk_lesson.anovikov.teamtrackerclient.ConnectFragment">

    <EditText
        android:id="@+id/edit_connect_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-8dp"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edit_adderss"
        app:layout_constraintLeft_toLeftOf="@+id/edit_connect_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_connect_port" />

    <TextView
        android:id="@+id/textview_connect_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="69dp"
        android:text="@string/text_adderss"
        android:textSize="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/textview_connect_port"
        app:layout_constraintTop_toBottomOf="@+id/textview_connect_port" />

    <TextView
        android:id="@+id/textview_connect_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="57dp"
        android:layout_marginTop="107dp"
        android:text="@string/connect_name"
        android:textSize="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_connect_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edit_name"
        android:layout_marginLeft="37dp"
        app:layout_constraintLeft_toRightOf="@+id/textview_connect_name"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="96dp" />

    <TextView
        android:id="@+id/textview_connect_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:text="@string/connect_port"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textview_connect_name"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textview_connect_name" />

    <EditText
        android:id="@+id/edit_connect_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-18dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edit_port"
        app:layout_constraintLeft_toLeftOf="@+id/edit_connect_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_connect_name" />



    <Button
        android:id="@+id/button_connect"
        android:layout_width="244dp"
        android:layout_height="55dp"
        android:text="@string/connect"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="68dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_connect_address" />





</android.support.constraint.ConstraintLayout>
